<?xml version="1.0"?>
<package>
  <name>agni_tf_tools</name>
  <version>0.1.0</version>
  <description>
  This package provides a gui program as well as a rviz plugin to publish static transforms.
  Both support the transformation between various Euler angle representations.
  The rviz plugin also allows to configure the transform with an interactive marker.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/agni_tf_tools</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages required at compile time: -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>eigen</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
